# rusty_qr

./: .gitignore  Cargo.toml  README.md  build.rs
lang/: CH_de.toml  CH_fr.toml  CH_it.toml  DE_de.toml  EN_en.default.toml  FR_fr.toml  IT_it.toml
src/: app.rs  card.rs  history.rs  lang.rs  logo.rs  main.rs  template.rs  theme.rs  workdir.rs
src/export/: docx.rs  eps.rs  mod.rs  pdf.rs  raster.rs  svg.rs
src/qr/: encoder.rs  micro_qr.rs  mod.rs  types.rs
src/style/: mod.rs  profile.rs  renderer.rs
src/ui/: card_designer.rs  creator.rs  export_ui.rs  library.rs  mod.rs  preview.rs  profiles.rs
templates/: index.json
