[package]
name = "rusty_qr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rusty_qr"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.28"
qrcode = "0.14"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
printpdf = "0.7"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
dirs = "5"
ureq  = { version = "2", features = ["json"] }
resvg = { version = "0.47", default-features = false, features = ["text", "system-fonts", "raster-images"] }

[build-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
winresource = "0.1"

[profile.release]
opt-level = 3
strip = true
lto = true
